--- a/index.html
+++ b/index.html
@@ -205,5 +205,48 @@
                 <button type="button" class="btn btn-default">Default</button>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-4 center-block">
+                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
+            </div>
+            <div class="col-md-4 center-block">
+                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
+            </div>
+            <div class="col-md-4 center-block">
+                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
+            </div>
+        </div>
+        <div class="row aboutText">
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
+            </div>
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
+            </div>
+            <div class="col-md-4 text-center">
+                <h3>
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About. About. About.
+                    About. About. About. About. About. About.
+                </h3>
+                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Default</button>
+            </div>
+        </div>
     </div>
 </html>
