--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
-                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
+                <img src="images/example1.png" style="width:225; height:254;" class="img-responsive centerImage" />
             </div>
         </div>
         <div class="row aboutText">
@@ -239,13 +239,13 @@
             </div>
             <div class="col-md-4 text-center">
                 <h3>
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About.
+                    Graphique was my very first attempt at creating a web app.
+                    It is a small app used for visualising sets of data. It
+                    was my first attempt and developing using the whole stack and
+                    helped me learn Node.js and a variety of other skills.
                 </h3>
-                <button type="button" class="btn btn-default">Default</button>
-                <button type="button" class="btn btn-default">Default</button>
+                <button type="button" class="btn btn-default">Source</button>
+                <button type="button" class="btn btn-default">Visit</button>
             </div>
         </div>
     </div>
