--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
-                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
+                <img src="images/example2.png" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
                 <img src="images/example1.png" style="width:225; height:254;" class="img-responsive centerImage" />
@@ -132,10 +132,10 @@
             </div>
             <div class="col-md-4 text-center">
                 <h3>
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About.
+                    A small Javascipt library that is an implementation of a
+                    metronome. I built this to learn the very basics of OOP
+                    and how to implement a slightly more complex object in
+                    Javascript.
                 </h3>
                 <button type="button" class="btn btn-default">Default</button>
                 <button type="button" class="btn btn-default">Default</button>
