--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
-                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
+                <img src="images/example3.png" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
@@ -89,10 +89,11 @@
             </div>
             <div class="col-md-4 text-center">
                 <h3>
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About.
+                    Not A Robot is a bot I wrote for Discord using node.js.
+                    It uses Markov Chains to try simulate sentences.
+                    While building this I learnt how to interact with the
+                    Discord API using Discord.js, and also how to handle
+                    promises and better handle async calls in Node.js
                 </h3>
                 <button type="button" class="btn btn-default">Default</button>
                 <button type="button" class="btn btn-default">Default</button>
