fixing center image!!!

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <body id="body">
         <div class="animate">
             <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="circle center-block cursorChange">
+                <div class="col-md-4 col-md-offset-4 outerDiv">
+                    <div class="circle outer center-block cursorChange">
                         <div class="circle inner center-block">
                             <img src="images/me.jpg" class="circle inner2 center-block img-responsive"/>
                         </div>
