--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <img src="images/example2.png" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
-                <img src="images/example1.png" style="width:225; height:254;" class="img-responsive centerImage" />
+                <img src="images/example1.png" style="width:225; height:254;" id="example1" class="img-responsive centerImage" />
             </div>
         </div>
         <div class="row aboutText">
@@ -143,10 +143,10 @@
             </div>
             <div class="col-md-4 text-center">
                 <h3>
-                    Graphique was my very first attempt at creating a web app.
-                    It is a small app used for visualising sets of data. It
-                    was my first attempt and developing using the whole stack and
-                    helped me learn Node.js and a variety of other skills.
+                    Github-Shame is a small Chrome extension that reminds you
+                    how long it has been since your last commit to a public repository.
+                    I made this to learn how Chrome extensions work, as well as
+                    to help keep myself motivated while I worked on other projects.
                 </h3>
                 <button type="button" class="btn btn-default">Source</button>
                 <button type="button" class="btn btn-default">Visit</button>
