--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="row">
             <div class="col-md-4 center-block">
-                <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
+                <img src="images/example4.png" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
                 <img src="images/example3.png" class="img-responsive centerImage" />
@@ -150,16 +150,6 @@
                 </h3>
                 <button type="button" class="btn btn-default">Source</button>
                 <button type="button" class="btn btn-default">Visit</button>
-            </div>
-        </div>
-    </div>
-    <div id="rightSidenav" class="rightSidenav">
-        <div class="row vertical-align">
-            <div class="col-md-1 hidden-xs">
-                <button type="button" class="btn btn-link" onclick="simulatePress(37);"><span class="glyphicon glyphicon-menu-left backLeft" aria-hidden="true"></span></button>
-            </div>
-            <div class="col-md-10 vertical-center">
-                <p data-height="265" data-theme-id="0" data-slug-hash="PWJPRN" data-default-tab="result" data-user="TehMo3" data-embed-version="2" data-pen-title="PWJPRN" class="codepen">See the Pen <a href="http://codepen.io/TehMo3/pen/PWJPRN/">PWJPRN</a> by Jasper Miles (<a href="http://codepen.io/TehMo3">@TehMo3</a>) on <a href="http://codepen.io">CodePen</a>.</p>
             </div>
         </div>
     </div>
