--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
         <div class="row aboutText">
             <div class="col-md-4 text-center">
                 <h3>
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About. About. About.
-                    About. About. About. About. About. About.
+                    intervalsJS is a node.js module for working with intervals.
+                    It has supportfor intervals of numbers, strings or even dates.
+                    I built this to not only create a useful library for the community,
+                    but also to learn object oriented programming principles and
+                    how unit tests complement the development process.
                 </h3>
                 <button type="button" class="btn btn-default">Default</button>
                 <button type="button" class="btn btn-default">Default</button>
