--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         </div>
         <div class="row">
             <div class="col-md-4 center-block">
-                <img src="images/example4.png" class="img-responsive centerImage" />
+                <a href="https://github.com/Tehmo3/intervalsJS"><img src="images/example4.png" class="img-responsive centerImage" /></a>
             </div>
             <div class="col-md-4 center-block">
-                <img src="images/example3.png" class="img-responsive centerImage" />
+                <a href="https://github.com/Tehmo3/Not-A-Robot"><img src="images/example3.png" class="img-responsive centerImage" /></a>
             </div>
             <div class="col-md-4 center-block">
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
@@ -115,10 +115,10 @@
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
-                <img src="images/example2.png" class="img-responsive centerImage" />
+                <a href="https://github.com/Tehmo3/metronome.js"><img src="images/example2.png" class="img-responsive centerImage" /></a>
             </div>
             <div class="col-md-4 center-block">
-                <img src="images/example1.png" style="width:225; height:254;" id="example1" class="img-responsive centerImage" />
+                <a href="https://github.com/Tehmo3/Git-Shame"><img src="images/example1.png" style="width:225; height:254;" id="example1" class="img-responsive centerImage" /></a>
             </div>
         </div>
         <div class="row aboutText">
@@ -144,7 +144,7 @@
             </div>
             <div class="col-md-4 text-center">
                 <h3>
-                    Github-Shame is a small Chrome extension that reminds you
+                    Git Shame is a small Chrome extension that reminds you
                     how long it has been since your last commit to a public repository.
                     I made this to learn how Chrome extensions work, as well as
                     to help keep myself motivated while I worked on other projects.
