--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <script src="js/jquery.scrollTo/jquery.scrollTo.min.js"></script>
         <script src="js/index.js"></script>
         <script src="js/jquery.touchSwipe.min.js"></script>
+        <script src="js/graph.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
     </head>
 
     <body id="body">
