--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="fadeIn">
         <div class="row margin">
             <div class="container col-md-1 col-md-offset-5 col-xs-2 col-xs-offset-4 text-center">
-                <a href="https://github.com/Tehmo3"><i class="fa fa-github-alt fa-3x"></i></a>
+                <a href="https://github.com/jbmiles"><i class="fa fa-github-alt fa-3x"></i></a>
             </div>
             <div class="container col-md-1 col-xs-2 text-center">
                 <a href="mailto:hello@jaspermiles.me"><i class="fa fa-envelope-o fa-3x"></i></a>
@@ -64,10 +64,10 @@
         </div>
         <div class="row">
             <div class="col-md-4 center-block">
-                <a href="https://github.com/Tehmo3/intervalsJS"><img src="images/example4.png" class="img-responsive centerImage" /></a>
+                <a href="https://github.com/jbmiles/intervalsJS"><img src="images/example4.png" class="img-responsive centerImage" /></a>
             </div>
             <div class="col-md-4 center-block">
-                <a href="https://github.com/Tehmo3/Not-A-Robot"><img src="images/example3.png" class="img-responsive centerImage" /></a>
+                <a href="https://github.com/jbmiles/Not-A-Robot"><img src="images/example3.png" class="img-responsive centerImage" /></a>
             </div>
             <div class="col-md-4 center-block">
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
@@ -112,10 +112,10 @@
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
-                <a href="https://github.com/Tehmo3/metronome.js"><img src="images/example2.png" class="img-responsive centerImage" /></a>
+                <a href="https://github.com/jbmiles/metronome.js"><img src="images/example2.png" class="img-responsive centerImage" /></a>
             </div>
             <div class="col-md-4 center-block">
-                <a href="https://github.com/Tehmo3/Git-Shame"><img src="images/example1.png" style="width:225; height:254;" id="example1" class="img-responsive centerImage" /></a>
+                <a href="https://github.com/jbmiles/Git-Shame"><img src="images/example1.png" style="width:225; height:254;" id="example1" class="img-responsive centerImage" /></a>
             </div>
         </div>
         <div class="row aboutText">
