--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
-                <a href="https://github.com/jbmiles/metronome.js"><img src="images/example2.png" class="img-responsive centerImage" /></a>
+                <a href="https://github.com/jbmiles/metronome.js"><img src="images/example5.jpg" class="img-responsive centerImage" /></a>
             </div>
             <div class="col-md-4 center-block">
                 <a href="https://github.com/jbmiles/Git-Shame"><img src="images/example1.png" style="width:225; height:254;" id="example1" class="img-responsive centerImage" /></a>
@@ -131,10 +131,10 @@
             </div>
             <div class="col-md-4 text-center">
                 <h3>
-                    A small Javascipt library that is an implementation of a
-                    metronome. I built this to learn the very basics of OOP
-                    and how to implement a slightly more complex object in
-                    Javascript.
+                    A small nodejs app that pauses spotify after a certain amount of time.
+                    I built this quite quickly after realising this was a common issue
+                    I was running into. But building the app helped me learn about
+                    using APIs to control other platforms in my apps.
                 </h3>
                 <button type="button" class="btn btn-default">Default</button>
                 <button type="button" class="btn btn-default">Default</button>
