--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <img src="http://placehold.it/425x225" class="img-responsive centerImage" />
             </div>
             <div class="col-md-4 center-block">
-                <a href="https://github.com/jbmiles/metronome.js"><img src="images/example5.jpg" class="img-responsive centerImage" /></a>
+                <a href="https://github.com/jbmiles/SpotiSleep"><img src="images/example5.jpg" class="img-responsive centerImage" /></a>
             </div>
             <div class="col-md-4 center-block">
                 <a href="https://github.com/jbmiles/Git-Shame"><img src="images/example1.png" style="width:225; height:254;" id="example1" class="img-responsive centerImage" /></a>
