--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
             </div>
             <div class="col-md-4 text-center">
                 <h3>
-                    A small nodejs app that pauses spotify after a certain amount of time.
+                    A small nodejs app that pauses Spotify after a certain amount of time.
                     I built this quite quickly after realising this was a common issue
-                    I was running into. But building the app helped me learn about
-                    using APIs to control other platforms in my apps.
+                    I was running into. I then built a small controller using a Raspberry
+                    Pi and a Rotary Encoder Module to create a physical timer in my room.
                 </h3>
                 <button type="button" class="btn btn-default">Default</button>
                 <button type="button" class="btn btn-default">Default</button>
